workspace(name = "biest")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
# run via "bazel run @hedron_compile_commands//:refresh_all"
http_archive(
    name = "hedron_compile_commands",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/ed994039a951b736091776d677f324b3903ef939.tar.gz",
    strip_prefix = "bazel-compile-commands-extractor-ed994039a951b736091776d677f324b3903ef939",
    sha256 = "085bde6c5212c8c1603595341ffe7133108034808d8c819f8978b2b303afc9e7",
)
load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")
hedron_compile_commands_setup()

# stand-alone SCTL
http_archive(
  name = "sctl",
  urls = [ "https://github.com/jons-pf/SCTL/archive/e1d2d81b69a07608f469993b9944db6b5f2b2490.zip" ],
  strip_prefix = "SCTL-e1d2d81b69a07608f469993b9944db6b5f2b2490",
  sha256 = "618356078c138085dc3cef9e2e8d8e76e3c31acb7e974fcb0cc765f5158b3f7e",
)
