cc_library(
  name = "biest",
  hdrs = [
    "biest.hpp",
    "biest/paraview.hpp",
    "biest/bie_solvers.hpp",
    "biest/boundary_integ_op.hpp",
    "biest/kernel.hpp",
    "biest/mat.hpp",
    "biest/singular_correction.hpp",
    "biest/surface.hpp",
    "biest/surface_op.hpp",
    "biest/vacuum-field.hpp",
  ],
  srcs = [
    "biest/bie_solvers.cc",
    "biest/boundary_integ_op.cc",
    "biest/surface_op.cc",
    "biest/surface.cc",
    "biest/vacuum-field.cc",
  ],
  visibility = ["//visibility:public"],
  deps = [
    ":sctl",
  ],
  data = [
    "//geom:lhd",
    "//geom:ncsx",
    "//geom:quas3",
    "//geom:w7x",
  ],
  includes = ["."],
  copts = [
    "-DSCTL_GLOBAL_MEM_BUFF=0",
    "-DSCTL_QUAD_T=__float128",
    "-DSCTL_HAVE_BLAS",
    "-DSCTL_HAVE_LAPACK",
    "-DSCTL_HAVE_FFTW",
    "-DSCTL_HAVE_FFTWF",
    "-DSCTL_HAVE_FFTWL",
  ],
  linkopts = [
    "-lblas",
    "-llapack",
    "-lfftw3",
    "-lfftw3f",
    "-lfftw3l",
  ],
)
