cc_library(
  name = "biest",
  hdrs = [
    "biest.hpp",
    "paraview.hpp",
    "bie_solvers.hpp",
    "boundary_integ_op.hpp",
    "kernel.hpp",
    "mat.hpp",
    "singular_correction.hpp",
    "surface.hpp",
    "surface_op.hpp",
    "vacuum-field.hpp",
  ],
  srcs = [
    "bie_solvers.cc",
    "boundary_integ_op.cc",
    "surface_op.cc",
    "surface.cc",
    "vacuum-field.cc",
  ],
  visibility = ["//visibility:public"],
  deps = [
    "//sctl:sctl",
  ],
  data = [
    "//geom:lhd",
    "//geom:ncsx",
    "//geom:quas3",
    "//geom:w7x",
  ],
  copts = [
    "-DSCTL_GLOBAL_MEM_BUFF=0",
    "-DSCTL_QUAD_T=__float128",
    "-DSCTL_DOUBLE",
    "-DSCTL_HAVE_BLAS",
    "-DSCTL_HAVE_LAPACK",
    "-DSCTL_HAVE_FFTW",
  ],
  linkopts = [
    "-lblas",
    "-llapack",
    "-lfftw3",
  ],
)
