cc_library(
  name = "biest",
  hdrs = [
    "biest.hpp",
    "biest/bie_solvers.hpp",
    "biest/bie_solvers.txx",
    "biest/boundary_integ_op.hpp",
    "biest/boundary_integ_op.txx",
    "biest/kernel.hpp",
    "biest/mat.hpp",
    "biest/singular_correction.hpp",
    "biest/surface.hpp",
    "biest/surface_op.hpp",
    "biest/surface_op.txx",
    "biest/surface.txx",
    "biest/vacuum-field.hpp",
    "biest/vacuum-field.txx",
  ],
  visibility = ["//visibility:public"],
  deps = [
    "@sctl//include:sctl",
  ],
  includes = ["."],
  copts = [
    "-DSCTL_GLOBAL_MEM_BUFF=0",
    "-DSCTL_QUAD_T=__float128",
    "-DSCTL_HAVE_BLAS",
    "-DSCTL_HAVE_LAPACK",
    "-DSCTL_HAVE_FFTW",
    "-DSCTL_HAVE_FFTWF",
    "-DSCTL_HAVE_FFTWL",
  ],
  linkopts = [
    "-lblas",
    "-llapack",
    "-lfftw3",
    "-lfftw3f",
    "-lfftw3l",
  ],
)