cc_library(
  name = "sctl",
  hdrs = [
    "sctl.hpp",
    "sctl/blas.h",
    "sctl/boundary_quadrature.hpp",
    "sctl/common.hpp",
    "sctl/fmm-wrapper.hpp",
    "sctl/kernel_functions.hpp",
    "sctl/lapack.h",
    "sctl/mat_utils.hpp",
    "sctl/parallel_solver.hpp",
    "sctl/quadrule.hpp",
    "sctl/sph_harm.hpp",
    "sctl/stacktrace.h",
    "sctl/vector.hpp",
    "sctl/boundary_integral.hpp",
    "sctl/cheb_utils.hpp",
    "sctl/lagrange-interp.hpp",
    "sctl/legendre_rule.hpp",
    "sctl/matrix.hpp",
    "sctl/morton.hpp",
    "sctl/ompUtils.hpp",
    "sctl/profile.hpp",
    "sctl/slender_element.hpp",
    "sctl/tensor.hpp",
    "sctl/vec.hpp",
    "sctl/comm.hpp",
    "sctl/fft_wrapper.hpp",
    "sctl/intrin-wrapper.hpp",
    "sctl/math_utils.hpp",
    "sctl/mem_mgr.hpp",
    "sctl/ode-solver.hpp",
    "sctl/sse2neon.h",
    "sctl/tree.hpp",
    "sctl/vec-test.hpp",
    "sctl/vtudata.hpp",
    "sctl/math_utils.txx",
    "sctl/mem_mgr.txx",
    "sctl/ode-solver.txx",
    "sctl/tree.txx",
    "sctl/vtudata.txx",
    "sctl/comm.txx",
    "sctl/fmm-wrapper.txx",
    "sctl/mat_utils.txx",
    "sctl/sph_harm.txx",
    "sctl/vector.txx",
    "sctl/boundary_integral.txx",
    "sctl/lagrange-interp.txx",
    "sctl/matrix.txx",
    "sctl/ompUtils.txx",
    "sctl/profile.txx",
    "sctl/slender_element.txx",
  ],
  visibility = ["//visibility:public"],
  includes = ["."],
  copts = [
    "-DSCTL_GLOBAL_MEM_BUFF=0",
    "-DSCTL_QUAD_T=__float128",
    "-DSCTL_HAVE_BLAS",
    "-DSCTL_HAVE_LAPACK",
    "-DSCTL_HAVE_FFTW",
    "-DSCTL_HAVE_FFTWF",
    "-DSCTL_HAVE_FFTWL",
  ],
  linkopts = [
    "-lblas",
    "-llapack",
    "-lfftw3",
    "-lfftw3f",
    "-lfftw3l",
  ],
)

cc_library(
  name = "biest",
  hdrs = [
    "biest.hpp",
    "biest/paraview.hpp",
    "biest/bie_solvers.hpp",
    "biest/boundary_integ_op.hpp",
    "biest/kernel.hpp",
    "biest/mat.hpp",
    "biest/singular_correction.hpp",
    "biest/surface.hpp",
    "biest/surface_op.hpp",
    "biest/vacuum-field.hpp",
  ],
  srcs = [
    "biest/bie_solvers.cc",
    "biest/boundary_integ_op.cc",
    "biest/surface_op.cc",
    "biest/surface.cc",
    "biest/vacuum-field.cc",
  ],
  visibility = ["//visibility:public"],
  deps = [
    ":sctl",
  ],
  data = [
    "//geom:lhd",
    "//geom:ncsx",
    "//geom:quas3",
    "//geom:w7x",
  ],
  includes = ["."],
  copts = [
    "-DSCTL_GLOBAL_MEM_BUFF=0",
    "-DSCTL_QUAD_T=__float128",
    "-DSCTL_HAVE_BLAS",
    "-DSCTL_HAVE_LAPACK",
    "-DSCTL_HAVE_FFTW",
    "-DSCTL_HAVE_FFTWF",
    "-DSCTL_HAVE_FFTWL",
  ],
  linkopts = [
    "-lblas",
    "-llapack",
    "-lfftw3",
    "-lfftw3f",
    "-lfftw3l",
  ],
)